--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11843,6 +11844,33 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+body {
+  font-family: "Mulish", sans-serif;
+}
+
+.sidebar {
+  background-color: #363740;
+}
+
+.nav-link {
+  padding-left: 2em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.nav-item > .active {
+  color: white;
+  background-color: #3e4049;
+  border-left: 2px solid white;
+  padding-left: calc(2em - 2px);
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.nav-item img {
+  width: 16px;
+  height: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
