--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,25 @@ body {
     font-family: "Mulish", sans-serif;
 }
 
+nav {
+    display: none;
+}
+
+
+@include media-breakpoint-up(sm) {
+    nav {
+        display: flex;
+        min-width: 200px;
+    }
+}
+
+@include media-breakpoint-up(md) {
+    nav {
+        min-width: 280px;
+    }
+}
+
+
 .sidebar {
     background-color: #363740;
 }
@@ -27,4 +46,9 @@ body {
 .nav-item img {
     width: 16px;
     height: 16px;
+}
+
+.profile {
+    width: 50px;
+    height: 50px;
 }
