--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11853,17 +11853,6 @@ nav {
   display: none;
 }
 
-@media (min-width: 576px) {
-  nav {
-    display: flex;
-    min-width: 200px;
-  }
-}
-@media (min-width: 768px) {
-  nav {
-    min-width: 280px;
-  }
-}
 .sidebar {
   background-color: #363740;
 }
@@ -11891,6 +11880,30 @@ nav {
 .profile {
   width: 50px;
   height: 50px;
+}
+
+.graph-card {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.graph-card > .list-group {
+  border-top: 0;
+}
+
+@media (min-width: 576px) {
+  nav {
+    display: flex;
+    min-width: 200px;
+  }
+}
+@media (min-width: 768px) {
+  nav {
+    min-width: 280px;
+  }
+  .graph-card {
+    flex-direction: row;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
