--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,21 +9,6 @@ nav {
     display: none;
 }
 
-
-@include media-breakpoint-up(sm) {
-    nav {
-        display: flex;
-        min-width: 200px;
-    }
-}
-
-@include media-breakpoint-up(md) {
-    nav {
-        min-width: 280px;
-    }
-}
-
-
 .sidebar {
     background-color: #363740;
 }
@@ -51,4 +36,30 @@ nav {
 .profile {
     width: 50px;
     height: 50px;
+}
+
+.graph-card {
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.graph-card>.list-group {
+    border-top: 0;
+}
+
+@include media-breakpoint-up(sm) {
+    nav {
+        display: flex;
+        min-width: 200px;
+    }
+
+}
+
+@include media-breakpoint-up(md) {
+    nav {
+        min-width: 280px;
+    }
+    .graph-card {
+        flex-direction: row;
+    }
 }
