--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,12 +47,33 @@ nav {
     border-top: 0;
 }
 
+.ticket-blocks-row {
+    flex-direction: column;
+}
+
+.ticket-blocks-row>div {
+    flex: 1;
+}
+
+.username {
+    display: none;
+}
+
 @include media-breakpoint-up(sm) {
     nav {
         display: flex;
         min-width: 200px;
     }
 
+    .username {
+        display: block;
+    }
+
+    .ticket-blocks-row {
+        flex-direction: row;
+        gap: 1rem;
+    }
+    
 }
 
 @include media-breakpoint-up(md) {
@@ -61,5 +82,9 @@ nav {
     }
     .graph-card {
         flex-direction: row;
+    }
+    .ticket-blocks-row {
+        flex-direction: row;
+        gap: 3rem;
     }
 }
