--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11892,7 +11892,7 @@ nav {
   border-top: 0;
 }
 
-.ticket-blocks-row {
+.ticket-blocks-row, .content-block-grid {
   flex-direction: column;
 }
 
@@ -11912,7 +11912,7 @@ nav {
   .username {
     display: block;
   }
-  .ticket-blocks-row {
+  .ticket-blocks-row, .content-block-grid {
     flex-direction: row;
     gap: 1rem;
   }
@@ -11924,8 +11924,7 @@ nav {
   .graph-card {
     flex-direction: row;
   }
-  .ticket-blocks-row {
-    flex-direction: row;
+  .ticket-blocks-row, .content-block-grid {
     gap: 3rem;
   }
 }
